# fakedns

./: .gitignore  CMakeLists.txt  capture.c  capture.h  capture_response.c  capture_response.h  config.c  config.h  fakedns  fakedns.c  fakedns.conf  fakedns.h  query.h  queue.c  queue.h  response.c  response.h  writelog.c  writelog.h
src/: capture_response.c  capture_response.h  config.c  config.h  fakedns  fakedns.c  fakedns.h  queue.c  queue.h  writelog.c  writelog.h
